[tool.poetry]
name = "vuanem-vnpay-ftp"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
returns = "^0.17.0"
google-cloud-bigquery = "^2.31.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.920"
pytest = "^6.2.5"
types-pytz = "^2021.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
# timeout = 530
testpaths = [
    "test",
]
